# UNO_Game

./: 518370910065_YanYangqin_p2_milestone2.tar  518370910065_YanYangqin_project2_milestone2.tar  518370910065_YanYangqin_project_2.tar  CMakeLists.txt  Readme.txt  card_print.c  changelog.txt  create_card.c  create_member.c  display.c  distribute.c  draw_card.c  file_welcome.c  free_member.c  judge.c  main.c  project_2.tar  project_2_final.tar  round.c  round_auto.c  shuffle.c  shuffle_ini.c  sort_card.c  uno.h  uno.h.gch  who_first.c  whowins.c
