cmake_minimum_required(VERSION 2.7)
project(project_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(project_2 main.c uno.h shuffle_ini.c create_card.c distribute.c round.c display.c draw_card.c create_member.c card_print.c judge.c whowins.c round_auto.c shuffle.c sort_card.c file_welcome.c who_first.c free_member.c)